--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,1 +1,19 @@
-youtube_api_key = "AIzaSy...YOUR_API_KEY_HERE..."
+[google_oauth]
+client_secret_json = """
+{
+  "installed": {
+    "client_id": "368554724283-gfrnnakbul1e8b08unitbpetp8mpkjn5.apps.googleusercontent.com",
+    "project_id": "your-project-id",
+    "auth_uri": "https://accounts.google.com/o/oauth2/auth",
+    "token_uri": "https://oauth2.googleapis.com/token",
+    "auth_provider_x509_cert_url": "https://www.googleapis.com/oauth2/v1/certs",
+    "client_secret": "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",
+    "redirect_uris": [
+      "urn:ietf:wg:oauth:2.0:oob",
+      "http://localhost"
+    ]
+  }
+}
+"""
+
+youtube_api_key = "AIzaSy...API_KEY_CỦA_BẠN..."
