--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -16,4 +16,4 @@ client_secret_json = """
 }
 """
 
-youtube_api_key = "AIzaSy...API_KEY_CỦA_BẠN..."
+youtube_api_key = "AIzaSyDz_oDmVpRY1T1W-dizavhpQqaIWwdMVrg"
